package core.api

interface WarningGenerator {
}