package core.model

data class UMLDiagram(val name: String)
